kubernetes/ingress/Ingress-path.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: path
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules: 
  - http:
      paths:
      - path: /hello
        pathType: Prefix
        backend: 
          service:
            name: grafana
            port:
              name: http
  - http:
      paths:
      - path: /grafana
        pathType: Prefix
        backend: 
          service:
            name: grafana
            port:
              name: http
